--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-themes": "^0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.1.0"
+    "react-markdown": "^7.1.0",
+    "react-syntax-highlighter": "^15.4.5",
+    "rehype-highlight": "^5.0.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
